# medical-appointment

./: README.md
.github/workflows/: ci.yml
Backend/MedicalAppointment.Api/: MedicalAppointment.Api.csproj  Program.cs  appsettings.json
Backend/MedicalAppointment.Api/Controllers/: AiController.cs  AppointmentController.cs  DoctorController.cs  PatientController.cs  ValuesController.cs
Backend/MedicalAppointment.Api/OpenAI/: OpenAiClient.cs
Backend/MedicalAppointment.Application/: MedicalAppointment.Application.csproj
Backend/MedicalAppointment.Application/DTOs/: PatientDTO.cs
Backend/MedicalAppointment.Application/ExportCSV/: ICsvExporter.cs
Backend/MedicalAppointment.Application/IServices/: IAppointmentService.cs  IDoctorService.cs  IPatientService.cs
Backend/MedicalAppointment.Application/Services/: AppointmentService.cs  AvailabilityService.cs  DoctorService.cs  PatientService.cs
Backend/MedicalAppointment.Domain/Entities/: Appointment.cs  AvailablilitySlot.cs  Doctor.cs  Patient.cs
Backend/MedicalAppointment.Domain/IRepositories/: IAppointmentRepository.cs  IAvailabilitySlotRepository.cs  IDoctorRepository.cs  (+1 more)
Backend/MedicalAppointment.Infrastructure/: MedicalAppointment.Infrastructure.csproj
CLI/: App.cpp  App.hpp  Appointment.cpp  Appointment.hpp  CMakeLists.txt  HospitalManager.cpp  HospitalManager.hpp  HttpClient.cpp  HttpClient.hpp  Validator.hpp  main.cpp
Frontend/: package-lock.json  package.json
Frontend/src/: App.tsx  Appointment.model.tsx  AppointmentMockService.tsx  AppointmentPage.tsx  Appointments.jsx  dateUtils.ts  index.css
(+34 files in other folders)
